Update the book

--- a/steemh.tex
+++ b/steemh.tex
@@ -6331,9 +6331,9 @@ https://mentions.steemdata.com/find?q=steemr
 \includegraphics{images/08_23.jpg}
 
 \hypertarget{tool-steem-keychain}{%
-\subsection[Steem Keychain ]{\texorpdfstring{Steem Keychain \footnote{作者：@ericet，原文链接：\url{https://steemit.com/cn/@ericet/steemkeychain-7n2z3fu72e}}}{Steem Keychain }}\label{tool-steem-keychain}}
+\subsection[Steem Keychain ]{\texorpdfstring{Steem Keychain \footnote{作者：@ericet，原文链接：\url{https://steemit.com/cn/@ericet/steemkeychain-7n2z3fu72e，创作时间：2019年4月16日}}}{Steem Keychain }}\label{tool-steem-keychain}}
 
-本节为Steem Keychain的简介和操作指南。
+本节为Steem Keychain的简介和操作指南
 
 Steem上的登录方式有3种：
 
@@ -6349,7 +6349,7 @@ Steem上的登录方式有3种：
 
 但是也有缺点，就是如果steemconnect被黑了，大家通过steemconnect授权登入的帐号密码将会被盗走。而且在未来，steemconnect将收取一点费用。
 
-所有第三种登录方式出现了，这就是Steem Keychain
+所以第三种登录方式出现了，这就是\textbf{Steem Keychain}
 
 如果你知道ETH的MetaMask 或者EOS的Scatter，理解Steem Keychain也就容易多了。
 
@@ -6449,7 +6449,7 @@ Power Up：
 
 如果你经常玩转steem-engine, keychain是必不可少的一个工具
 
-但是Steem keychain也有自身的缺点，比如，不支持手机，所有要在手机上使用keychain可能要一阵子了
+但是Steem keychain也有自身的缺点，比如，不支持手机，所以要在手机上使用keychain可能要一阵子了
 
 \hypertarget{zbwzp_}{%
 \chapter{周边网站}\label{zbwzp_}}
