Update the book

--- a/steemh.tex
+++ b/steemh.tex
@@ -6331,7 +6331,7 @@ https://mentions.steemdata.com/find?q=steemr
 \includegraphics{images/08_23.jpg}
 
 \hypertarget{tool-steem-keychain}{%
-\subsection[Steem Keychain ]{\texorpdfstring{Steem Keychain \footnote{作者：@ericet，原文链接：\url{https://steemit.com/cn/@ericet/steemkeychain-7n2z3fu72e，创作时间：2019年4月16日}}}{Steem Keychain }}\label{tool-steem-keychain}}
+\subsection[Steem Keychain ]{\texorpdfstring{Steem Keychain \footnote{作者：@ericet，创作时间：2019年4月16日，原文链接：\url{https://steemit.com/cn/@ericet/steemkeychain-7n2z3fu72e}}}{Steem Keychain }}\label{tool-steem-keychain}}
 
 本节为Steem Keychain的简介和操作指南
 
