Update the book

--- a/steemh.tex
+++ b/steemh.tex
@@ -353,7 +353,7 @@
 
 \title{Steem Handbook}
 \author{Steem 中文社区集体创作}
-\date{2019-04-18}
+\date{2019-04-19}
 
 \begin{document}
 %\maketitle
@@ -2631,6 +2631,81 @@ Enjoy it!
 2、如果自己搭建，建议将默认的SSH端口换成别的。我刚开始运行自己服务器，才半天就被攻击了六千余次，吓到半死。如果被暴力破解，很可能会变成肉鸡；
 
 3、几个朋友共享梯子倒还好，但不推荐以此为生。之前在推特上看到，某梯子商家被判刑了。我认识的几个卖梯子的``个体户''现在不是停止服务，就是低调的一塌糊涂。
+
+\hypertarget{dapengsteemit-github}{%
+\section[如何参与dapeng《Steemit 教程》Github多人写作 ]{\texorpdfstring{如何参与dapeng《Steemit 教程》Github多人写作 \footnote{作者：@evathinking，编辑：@robertyan，原文链接：\url{https://steemit.com/github/@evathinking/github}}}{如何参与dapeng《Steemit 教程》Github多人写作 }}\label{dapengsteemit-github}}
+
+第一步：注册github用户，不写了
+
+第二步：导入写书的项目
+
+（这一步不要问我怎么建仓库，注册完第一步，你就可以建立仓库，然后把git地址告诉别人，别人就可以pull下来，和本教程一样）
+
+\begin{figure}
+\centering
+\includegraphics{images/chapter_02_0/1.png}
+\caption{1.png}
+\end{figure}
+
+填写dapeng的git项目地址
+
+\begin{figure}
+\centering
+\includegraphics{images/chapter_02_0/2.png}
+\caption{2.png}
+\end{figure}
+
+导入好后就是这样
+
+\begin{figure}
+\centering
+\includegraphics{images/chapter_02_0/3.png}
+\caption{3.png}
+\end{figure}
+
+第三步：编辑你的内容
+
+\begin{figure}
+\centering
+\includegraphics{images/chapter_02_0/4.png}
+\caption{4.png}
+\end{figure}
+
+编辑的样子：
+
+\begin{figure}
+\centering
+\includegraphics{images/chapter_02_0/5.png}
+\caption{5.png}
+\end{figure}
+
+也可以添加文档
+
+\begin{figure}
+\centering
+\includegraphics{images/chapter_02_0/8.png}
+\caption{8.png}
+\end{figure}
+
+第四步：提交
+
+这个页面拖到最下面，写好变更原因后提交
+
+\begin{figure}
+\centering
+\includegraphics{images/chapter_02_0/6.png}
+\caption{6.png}
+\end{figure}
+
+第五步：查看提交，进入到写书项目发起人的仓库，就可以看到提交的内容了，是不是很简单
+
+\begin{figure}
+\centering
+\includegraphics{images/chapter_02_0/7.png}
+\caption{7.png}
+\end{figure}
+
+请随时查看页面顶部，是在哪一个人的仓库下面
 
 \hypertarget{cyczp}{%
 \chapter{常用操作}\label{cyczp}}
