Update the book

--- a/steemh.tex
+++ b/steemh.tex
@@ -7174,7 +7174,7 @@ STEEMPEAK推出了一年多了，不知道各位有沒有在使用?
 \includegraphics{images/chapter_09_0/JbiMWdr9-image.png}
 
 \hypertarget{steempeak}{%
-\subsection[STEEMPEAK的手機版 ]{\texorpdfstring{STEEMPEAK的手機版 \footnote{作者:@minloulou;编辑:@jianan;原文链接:\url{https://steemit.com/steem-guides/@minloulou/steempeak-steempeak}}}{STEEMPEAK的手機版 }}\label{steempeak}}
+\subsection[STEEMPEAK的手機版 ]{\texorpdfstring{STEEMPEAK的手機版 \footnote{作者:@minloulou;编辑:@jianan;原文链接:\url{https://steemit.com/steem-guides/@minloulou/25jqmd-steempeak-steempeak}}}{STEEMPEAK的手機版 }}\label{steempeak}}
 
 \href{https://steempeak.com/steem-guides/@minloulou/steempeak-steempeak}{齊齊來玩STEEMPEAK(一) STEEMPEAK的基本使用方法}
 
@@ -7185,29 +7185,13 @@ STEEMPEAK推出了一年多了，不知道各位有沒有在使用?
 
 在右上角點一下後便會彈出Login的選單。手機由於沒有Steem Keychain, 所以使用steemconnect去登入。
 
-\begin{figure}
-\centering
 \includegraphics{images/chapter_09_0/Z2hTcH1H-WhatsApp20Image202019-06-2920at2015.52.20.jpeg}
-\caption{WhatsApp Image 20190629 at 15.52.20.jpeg}
-\end{figure}
 
-\begin{figure}
-\centering
 \includegraphics{images/chapter_09_0/u2pQKwMZ-WhatsApp20Image202019-06-2920at2015.52.21.jpeg}
-\caption{WhatsApp Image 20190629 at 15.52.21.jpeg}
-\end{figure}
 
-\begin{figure}
-\centering
 \includegraphics{images/chapter_09_0/1FTIWwzQ-WhatsApp20Image202019-06-2920at2015.52.22.jpeg}
-\caption{WhatsApp Image 20190629 at 15.52.22.jpeg}
-\end{figure}
 
-\begin{figure}
-\centering
 \includegraphics{images/chapter_09_0/GcrwTzYN-WhatsApp20Image202019-06-2920at2015.52.22201.jpeg}
-\caption{WhatsApp Image 20190629 at 15.52.22 1.jpeg}
-\end{figure}
 
 登入成功後, 你會看到你的個人頭像在右上方。
 
@@ -7289,7 +7273,7 @@ Steemitworldmap是一个基于Steem社区和谷歌地图的一个应用，官方
 
 \includegraphics{images/chapter_09_0/image_1_1_1.png}
 
-4.点击你认为正确的地点后，地图下部会显示出一串类似``\[//\]:\# \(\!steemitworldmap 31.149316 lat 121.803556 long d3scr\)''的代码，点击这串代码，系统会提示已复制成功
+4.点击你认为正确的地点后，地图下部会显示出一串类似``\[//\]:\# (!steemitworldmap 31.149316 lat 121.803556 long d3scr)''的代码，点击这串代码，系统会提示已复制成功
 
 \includegraphics{images/chapter_09_0/image_1_1_1_1.png}
 
@@ -7303,7 +7287,7 @@ Steemitworldmap是一个基于Steem社区和谷歌地图的一个应用，官方
 
 \textbf{国内用户被墙时的使用方法}
 
-国内访问\url{https://www.steemitworldmap.com/} 时，你会发现地图是加载不出来的，只有数字，那是因为谷歌被墙了，这时候得采用另一个策略。大家看到上面介绍的我们需要复制粘贴的一串代码中，只有lat（纬度）和long（经度）前面的数字会发生变化，其他都不会变。那么你只要能找到地图的经纬度，来代替下面的代码中的经纬度就可以了，不一定非得打开Steemitworldmap。 \[//\]:\#(!steemitworldmap 纬度数字 lat 经度数字 long d3scr
+国内访问\url{https://www.steemitworldmap.com/} 时，你会发现地图是加载不出来的，只有数字，那是因为谷歌被墙了，这时候得采用另一个策略。大家看到上面介绍的我们需要复制粘贴的一串代码中，只有lat（纬度）和long（经度）前面的数字会发生变化，其他都不会变。那么你只要能找到地图的经纬度，来代替下面的代码中的经纬度就可以了，不一定非得打开Steemitworldmap。 \[//\]:\# (!steemitworldmap 纬度数字 lat 经度数字 long d3scr
 
 1. PC端
 
