--- a/steemh.tex
+++ b/steemh.tex
@@ -353,7 +353,7 @@
 
 \title{Steem Handbook}
 \author{Steem 中文社区集体创作}
-\date{2019-07-05}
+\date{2019-07-06}
 
 \begin{document}
 %\maketitle
@@ -7273,7 +7273,7 @@ Steemitworldmap是一个基于Steem社区和谷歌地图的一个应用，官方
 
 \includegraphics{images/chapter_09_0/image_1_1_1.png}
 
-4.点击你认为正确的地点后，地图下部会显示出一串类似``\[//\]:\# (!steemitworldmap 31.149316 lat 121.803556 long d3scr)''的代码，点击这串代码，系统会提示已复制成功
+4.点击你认为正确的地点后，地图下部会显示出一串类似 \texttt{{[}//{]}:\#\ (!steemitworldmap\ 31.149316\ lat\ 121.803556\ long\ d3scr)} 的代码，点击这串代码，系统会提示已复制成功
 
 \includegraphics{images/chapter_09_0/image_1_1_1_1.png}
 
@@ -7287,7 +7287,9 @@ Steemitworldmap是一个基于Steem社区和谷歌地图的一个应用，官方
 
 \textbf{国内用户被墙时的使用方法}
 
-国内访问\url{https://www.steemitworldmap.com/} 时，你会发现地图是加载不出来的，只有数字，那是因为谷歌被墙了，这时候得采用另一个策略。大家看到上面介绍的我们需要复制粘贴的一串代码中，只有lat（纬度）和long（经度）前面的数字会发生变化，其他都不会变。那么你只要能找到地图的经纬度，来代替下面的代码中的经纬度就可以了，不一定非得打开Steemitworldmap。 \[//\]:\# (!steemitworldmap 纬度数字 lat 经度数字 long d3scr
+国内访问\url{https://www.steemitworldmap.com/} 时，你会发现地图是加载不出来的，只有数字，那是因为谷歌被墙了，这时候得采用另一个策略。大家看到上面介绍的我们需要复制粘贴的一串代码中，只有lat（纬度）和long（经度）前面的数字会发生变化，其他都不会变。那么你只要能找到地图的经纬度，来代替下面的代码中的经纬度就可以了，不一定非得打开Steemitworldmap。
+
+\texttt{{[}//{]}:\#\ (!steemitworldmap\ 纬度数字\ lat\ 经度数字\ long\ d3scr}
 
 1. PC端
 
@@ -7324,7 +7326,9 @@ Steemitworldmap是一个基于Steem社区和谷歌地图的一个应用，官方
 
 \includegraphics{images/chapter_09_0/image_1_1_1_1_1_1_1_1_1_1_1_1_1_1_1.png}
 
-将经纬度代替以下代码，并将其复制粘贴到你的帖子的最后即可。 \[//\]:\# (!steemitworldmap 纬度数字 lat 经度数字 long d3scr
+将经纬度代替以下代码，并将其复制粘贴到你的帖子的最后即可。
+
+\texttt{{[}//{]}:\#\ (!steemitworldmap\ 纬度数字\ lat\ 经度数字\ long\ d3scr}
 
 后语
 
