Update the book

--- a/steemh.tex
+++ b/steemh.tex
@@ -7405,7 +7405,9 @@ Steemitworldmap是一个基于Steem社区和谷歌地图的一个应用，官方
 
 国内访问\url{https://www.steemitworldmap.com/} 时，你会发现地图是加载不出来的，只有数字，那是因为谷歌被墙了，这时候得采用另一个策略。大家看到上面介绍的我们需要复制粘贴的一串代码中，只有lat（纬度）和long（经度）前面的数字会发生变化，其他都不会变。那么你只要能找到地图的经纬度，来代替下面的代码中的经纬度就可以了，不一定非得打开Steemitworldmap。
 
-\texttt{{[}//{]}:\#\ (!steemitworldmap\ 纬度数字\ lat\ 经度数字\ long\ d3scr}
+\begin{verbatim}
+[//]:# (!steemitworldmap 纬度数字 lat 经度数字 long d3scr
+\end{verbatim}
 
 1. PC端
 
@@ -7444,7 +7446,9 @@ Steemitworldmap是一个基于Steem社区和谷歌地图的一个应用，官方
 
 将经纬度代替以下代码，并将其复制粘贴到你的帖子的最后即可。
 
-\texttt{{[}//{]}:\#\ (!steemitworldmap\ 纬度数字\ lat\ 经度数字\ long\ d3scr}
+\begin{verbatim}
+[//]:# (!steemitworldmap 纬度数字 lat 经度数字 long d3scr
+\end{verbatim}
 
 后语
 
